--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,10 @@ jdk:
   - openjdk11
 services:
   - docker
+
+before_install:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker pull openjdk:11-jre-slim-sid
+
 script:
   - ./mvnw clean install
