--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,27 @@
 
   <profiles>
     <profile>
+      <id>deploy-heroku</id>
+      <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.heroku.sdk</groupId>
+            <artifactId>heroku-maven-plugin</artifactId>
+            <version>3.0.2</version>
+            <configuration>
+              <appName>spring-boot-ci-cd</appName>
+              <processTypes>
+                <web>java $JAVA_OPTS -jar ${project.build.finalName}.jar</web>
+              </processTypes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>deploy-docker</id>
       <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
