--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
             <configuration>
               <appName>spring-boot-ci-cd</appName>
               <processTypes>
-                <web>java $JAVA_OPTS -jar -Dserver.port=$PORT ${project.build.finalName}.jar</web>
+                <web>java $JAVA_OPTS -jar -Dserver.port=$PORT target/${project.build.finalName}.jar</web>
               </processTypes>
             </configuration>
           </plugin>
