--- a/pom.xml
+++ b/pom.xml
@@ -91,25 +91,17 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>com.spotify</groupId>
-            <artifactId>dockerfile-maven-plugin</artifactId>
-            <version>1.4.13</version>
-            <executions>
-              <execution>
-                <id>default</id>
-                <goals>
-                  <goal>build</goal>
-                  <goal>push</goal>
-                </goals>
-              </execution>
-            </executions>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>jib-maven-plugin</artifactId>
+            <version>2.2.0</version>
             <configuration>
-              <repository>lukaszrys/spring-boot-ci-cd</repository>
-              <tag>${project.version}</tag>
-              <tag>latest</tag>
-              <buildArgs>
-                <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
-              </buildArgs>
+              <to>
+                <image>lukaszrys/spring-boot-ci-cd</image>
+                <tags>
+                  <tag>${project.version}</tag>
+                  <tag>latest</tag>
+                </tags>
+              </to>
             </configuration>
           </plugin>
         </plugins>
